# home-assistant-nl-day-ahead-prices

./: CHANGELOG.md  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/nl_day_ahead_prices/: __init__.py  advisor.py  binary_sensor.py  calculations.py  config_flow.py  const.py  coordinator.py  dashboard.py  diagnostics.py  manifest.json  models.py  number.py  optimizer.py  price_resolution.py  providers.py  recommendations.py  sensor.py  services.py  services.yaml  services_v2.py  strings.json  supplier_profiles.json  supplier_profiles.py  switch.py
custom_components/nl_day_ahead_prices/analysis/: chart_export.py
custom_components/nl_day_ahead_prices/planning/: __init__.py  appliance.py  battery.py  boiler.py  ev_charging.py  solar_export.py
custom_components/nl_day_ahead_prices/scoring/: __init__.py  day_score.py  opportunity.py  price_score.py
custom_components/nl_day_ahead_prices/translations/: en.json  nl.json
tests/: test_calculations.py  test_parsers.py  test_price_resolution.py  test_provider_fallback.py  test_supplier_profiles.py  test_v2.py
