[project]
name = "home-assistant-nl-day-ahead-prices"
version = "2.0.0"
description = "EnerPrice smart energy assistant for Dutch dynamic electricity tariffs"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE", "ASYNC", "T20"]
ignore = ["E501", "UP017"]
